publish my website
thankyou for publishing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 
+
 <!doctype html>
 
 <html lang="en">
@@ -95,7 +96,7 @@
       <div class="col-md-6 pr-5 pl-5">
         <div class="card text-center wow bounceInLeft" data-wow-delay=".25s"> <img class="card-img-top rounded-circle img-fluid" src="images/trainers1.jpg" alt="Card image">
           <div class="card-body mb-5">
-            <h4 class="card-title">JENIFERR</h4>
+            <h4 class="card-title">AVINASH</h4>
             <p class="card-text">Trainers, athletes and serious clients alike are looking for the toughest, most brutally productive training techniques to spice up their workouts and provide a truly unique challenge</p>
           </div>
         </div>
@@ -103,7 +104,7 @@
       <div class="col-md-6 pl-5 pr-5">
         <div class="card text-center wow bounceInRight" data-wow-delay=".25s"> <img class="card-img-top rounded-circle img-fluid" src="images/trainers2.jpg" alt="Card image">
           <div class="card-body mb-5">
-            <h4 class="card-title">JHON</h4>
+            <h4 class="card-title">JAYANT</h4>
             <p class="card-text">Trainers, athletes and serious clients alike are looking for the toughest, most brutally productive training techniques to spice up their workouts and provide a truly unique challenge</p>
           </div>
         </div>
@@ -137,14 +138,15 @@
     </div>
   </div>
 </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/djHa6pZskQU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <footer class="container-fluid">
   <div class="container">
     <div class="row">
       <div class="col-md-3 footer1 d-flex wow bounceInLeft" data-wow-delay=".25s">
         <div class="d-flex flex-wrap align-content-center"> <a href="#"><img src="images\logo2.png" alt="logo" /></a>
           <p> Bhootnath Rd, Bahadurpur Housing Colony, Mahatma Gandhi Nagar, Chitragupta Nagar, Patna, Bihar 800026
-            dolor. Ae</p>
-          <p>&copy; 2021 METAL & BARS. All rights reserved.<br> Design by <a href="https://freehtml5.co" target="_blank">FreeHTML5</a>.</p>
+            </p>
+          <p>&copy; 2021 METAL & BARS. All rights reserved.<br> Designed by <a href="https://www.instagram.com/animesh.bhatt_/" target="_blank">ANIMESH BHATT</a>.</p>
         </div>
       </div>
       <div class="col-md-6 footer2 wow bounceInUp" data-wow-delay=".25s" id="contact">
@@ -182,7 +184,7 @@
         <h5>PHONE</h5>
         <p>9801570128</p>
         <h5>EMAIL</h5>
-        <p>email@example.com</p>
+        <p>jayant200586@gmail.com</p>
         <div class="social-links">
           <ul class="nav nav-item">
             <li><a href="https://www.facebook.com/Metal-N-Bars-Gym-Fitness-Center-352423081883655" class="btn btn-secondary mr-1 mb-2"><img src="images/facebook.png" alt="facebook" /></a></li>
